# differentiate-pictures-for-auto-sync

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CLAUDE.md  Caddyfile  Caddyfile.local  Dockerfile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  main.py  requirements.txt
.claude/: settings.json
ai-created-poc/html/: DPFAS.html
app/: auth.py  cp_ipynb.py  database.py  file_handling.py  gpsdata.py  main.py  test.py  walk_dir.py
app/delete_files/: md5_compare.ipynb
app/file_handling/: file_open_dialog.py
app/object_identification/: obj_id.ipynb  obj_id.py
app/static/: app.js  index.html  style.css
app/tests/: conftest.py  test_api_docs_disabled.py  test_auth_gate.py  test_main.py  test_thumb_concurrency.py  test_thumb_draft.py
app/tests_selenium/: conftest.py  test_album_switching.py  test_folder_prompt.py  (+3 more)
docs/: README.md  layout.txt  overview.txt
documentation/: README.md  VISION.md
resources/: links.txt
scripts/: test_selenium.sh
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: accounts.py  audit.py  auth_routes.py  config.py  cookies.py  db.py  login_page.py  main.py  rate_limit.py  security.py  tokens.py
server/scripts/: create_account.py  test_db.sh  test_redis.sh
server/tests/: conftest.py  test_accounts.py  test_api_docs_disabled.py  test_audit.py  test_auth_routes.py  test_config.py  test_dockerfile_build.py  test_health.py  test_login_page.py  test_main_startup.py  test_rate_limit.py  test_security.py  test_tokens.py  test_users_table.py
(+152 files in other folders)
