[project]
name = "photo-server"
version = "0.1.0"
description = "photo-server backend: FastAPI + Postgres"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
]
