[project]
name = "photo-server"
version = "0.1.0"
description = "photo-server backend: FastAPI + Postgres"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.2",
    "uvicorn>=0.51.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.13.0",
    "redis>=5.1.1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = [
    "docker: builds/runs a real Docker image - slow, excluded from the default run (see TOOLCHAIN.md)",
]
addopts = "-m 'not docker'"
